--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,16 +10,45 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
-        @keyframes scroll {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
+      html {
+        scroll-behavior: smooth;
+      }
+      @keyframes infinite-scroll {
+        from { transform: translateX(0); }
+        to { transform: translateX(-50%); }
+      }
+      .animate-infinite-scroll {
+        animation: infinite-scroll 32s linear infinite;
+      }
+      .group:hover .animate-infinite-scroll {
+        animation-play-state: paused;
+      }
+      .animate-ticker-scroll {
+        animation: infinite-scroll 40s linear infinite;
+      }
+      .group:hover .animate-ticker-scroll {
+        animation-play-state: paused;
+      }
+      @keyframes fade-in-up {
+        from {
+            opacity: 0;
+            transform: translateY(15px);
         }
-        .animate-scroll {
-            animation: scroll 40s linear infinite;
+        to {
+            opacity: 1;
+            transform: translateY(0);
         }
+      }
+      .animate-fade-in-up {
+          animation: fade-in-up 0.6s ease-out forwards;
+      }
+      .prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
+        scroll-margin-top: 100px;
+      }
     </style>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -28,12 +56,24 @@
               'brand-accent': '#40E0D0',
               'brand-white': '#FFFFFF',
               'brand-gray': '#808080',
+              'brand-gold': '#facc15',
+              'whatsapp-green': '#25D366',
+              'telegram-blue': '#0088CC',
+              'link-gray': '#6B7280',
             },
             fontFamily: {
               sans: ['Montserrat', 'sans-serif'],
             },
             animation: {
-              scroll: 'scroll 40s linear infinite',
+              shake: 'shake 0.82s cubic-bezier(.36,.07,.19,.97) both',
+            },
+            keyframes: {
+              shake: {
+                '10%, 90%': { transform: 'translate3d(-1px, 0, 0)' },
+                '20%, 80%': { transform: 'translate3d(2px, 0, 0)' },
+                '30%, 50%, 70%': { transform: 'translate3d(-4px, 0, 0)' },
+                '40%, 60%': { transform: 'translate3d(4px, 0, 0)' },
+              },
             },
           },
         },
@@ -51,7 +91,7 @@
 }
 </script>
 </head>
-<body class="bg-brand-primary font-sans">
+<body class="bg-gray-50 dark:bg-brand-primary font-sans transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
