feat: Add AI prompts manual page and chatbot trigger
Introduces a new page dedicated to AI prompts and enhances the chatbot's functionality by allowing it to be triggered externally via a custom event. This improves user access to AI-related content and provides a more integrated chatbot experience.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-icons/": "https://aistudiocdn.com/react-icons@^5.5.0/"
+    "react-icons/": "https://aistudiocdn.com/react-icons@^5.5.0/",
+    "react-icons/fa/": "https://aistudiocdn.com/react-icons@^5.5.0/fa/",
+    "react-icons/fa6/": "https://aistudiocdn.com/react-icons@^5.5.0/fa6/"
   }
 }
 </script>
