--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </script>
 </head>
 <body class="bg-gray-50 dark:bg-brand-primary font-sans transition-colors duration-300">
-    <div id="root"></div>
+    <div id="raiz"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
