--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-icons/": "https://aistudiocdn.com/react-icons@^5.5.0/",
     "react-icons/fa/": "https://aistudiocdn.com/react-icons@^5.5.0/fa/",
-    "react-icons/fa6/": "https://aistudiocdn.com/react-icons@^5.5.0/fa6/"
+    "react-icons/fa6/": "https://aistudiocdn.com/react-icons@^5.5.0/fa6/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
 <body class="bg-gray-50 dark:bg-brand-primary font-sans transition-colors duration-300">
-    <div id="raiz"></div>
+    <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
