refactor: Restructure legal and other page links
Updates the routing and navigation for legal and other informational pages. The 'legal' modal has been replaced with direct page navigation for specific legal content such as 'Aviso Legal Riesgo', 'Terminos Academia', 'Politica Privacidad', and 'Transparencia Legal'. The animation speed for the ticker scroll has also been reduced.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TradeVision Latam</title>
+    <title translate="no">TradeVision Latam</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
         animation-play-state: paused;
       }
       .animate-ticker-scroll {
-        animation: infinite-scroll 40s linear infinite;
+        animation: infinite-scroll 20s linear infinite;
       }
       .group:hover .animate-ticker-scroll {
         animation-play-state: paused;
