--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title translate="no">TradeVision Latam</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
       html {
@@ -60,6 +60,68 @@
       }
       .animate-pulse-glow {
         animation: pulse-glow 2s infinite ease-in-out;
+      }
+      .bg-grid-pattern {
+        background-image: linear-gradient(rgba(64, 224, 208, 0.07) 1px, transparent 1px), linear-gradient(90deg, rgba(64, 224, 208, 0.07) 1px, transparent 1px);
+        background-size: 20px 20px;
+      }
+      
+      /* Custom styles for range inputs */
+      input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: 12px;
+        background: #e5e7eb;
+        border-radius: 9999px;
+        outline: none;
+        opacity: 0.7;
+        transition: opacity .2s;
+      }
+      .dark input[type="range"] {
+        background: #374151;
+      }
+      input[type="range"]:hover {
+        opacity: 1;
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 24px;
+        height: 24px;
+        background: #40E0D0; /* brand-accent */
+        cursor: pointer;
+        border-radius: 9999px;
+        border: 4px solid #0A1931;
+      }
+      .dark input[type="range"]::-webkit-slider-thumb {
+        border-color: #f9fafb;
+      }
+      input[type="range"]::-moz-range-thumb {
+        width: 24px;
+        height: 24px;
+        background: #40E0D0; /* brand-accent */
+        cursor: pointer;
+        border-radius: 9999px;
+        border: 4px solid #0A1931;
+      }
+      .dark input[type="range"]::-moz-range-thumb {
+        border-color: #f9fafb;
+      }
+
+      /* Flashing animations for Execution Zone */
+      @keyframes flash-red-slow {
+        50% { background-color: rgba(239, 68, 68, 0.3); }
+      }
+      .animate-flash-red-slow {
+        animation: flash-red-slow 1.5s infinite;
+      }
+
+      @keyframes flash-red-fast {
+        50% { background-color: rgba(239, 68, 68, 0.7); }
+      }
+      .animate-flash-red-fast {
+        animation: flash-red-fast 0.7s infinite;
       }
     </style>
     <script>
