fix(animation): Enhance infinite scroll performance and visual fidelity
Introduces several CSS properties like `will-change`, `backface-visibility`, and `perspective` to optimize the performance of the infinite scrolling animations. It also refines the animation keyframes for smoother transitions and slightly increases animation durations for a more polished feel.

Additionally, the `NewsTicker` component now utilizes a mask to prevent harsh edges on the scrolling text and adds a small accent bullet for better readability.

The `App.tsx` file now includes state management for a new `EmailCopyModal` and updates the body scroll logic to accommodate this modal, ensuring the page scroll is correctly managed when any modal is open.

The `MainPage.tsx` file sees a minor reordering of `DisciplineCtaSection` and `FreeCommunityCtaSection` for potential layout improvements, and the `HeroSection` now uses a more robust `AnimatedSection` component for its content.

The `Footer.tsx` component has been updated to utilize a new `handleEmailClick` utility function, which triggers a modal for email copying instead of directly opening the mail client. This aligns with the new modal-based architecture for user interaction.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
         user-select: none; /* Standard syntax */
       }
       @keyframes infinite-scroll {
-        from { transform: translateX(0); }
-        to { transform: translateX(-50%); }
+        0% { transform: translate3d(0, 0, 0); }
+        100% { transform: translate3d(-50%, 0, 0); }
       }
       .animate-infinite-scroll {
-        animation: infinite-scroll 32s linear infinite;
+        animation: infinite-scroll 60s linear infinite;
+        will-change: transform;
+        backface-visibility: hidden;
+        perspective: 1000px;
       }
       .group:hover .animate-infinite-scroll {
         animation-play-state: paused;
       }
       .animate-ticker-scroll {
-        animation: infinite-scroll 14s linear infinite;
+        animation: infinite-scroll 45s linear infinite;
+        will-change: transform;
+        backface-visibility: hidden;
+        perspective: 1000px;
       }
       .group:hover .animate-ticker-scroll {
         animation-play-state: paused;
