--- a/index.html
+++ b/index.html
@@ -357,6 +357,17 @@
   }
 }
 </script>
+  <script>
+    (function() {
+      const publicPages = ['/checkout/complete'];
+      const path = window.location.pathname.replace(/\/$/, '');
+      
+      if (publicPages.includes(path)) {
+        // Redirigimos internamente de /checkout/complete a /#/checkout/complete
+        window.location.replace(window.location.origin + '/#' + path);
+      }
+    })();
+  </script>
 </head>
 <body class="bg-gray-50 dark:bg-brand-primary font-sans transition-colors duration-300">
     <div id="root"></div>
