--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title translate="no">TradeVision Latam</title>
+    <title translate="no">TradeVision Latam | Academia de Trading Profesional y Estrategia C90</title>
+    <meta name="description" content="TradeVision Latam es la infraestructura líder en formación financiera para Latinoamérica. Especializados en Lógica Institucional, Psicotrading y Gestión de Probabilidades mediante la Estrategia C90. Educación ética para traders de élite." />
+    <meta name="author" content="TradeVision Latam" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TradeVision Latam | Academia de Trading Profesional y Estrategia C90" />
+    <meta property="og:description" content="Domina los mercados financieros con la metodología institucional líder en Latinoamérica. Disciplina, ética y rentabilidad real." />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Datos Estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "TradeVision Latam",
+      "alternateName": "TradeVision",
+      "url": "https://tradevision.me",
+      "logo": "https://tradevision.me/vite.svg",
+      "description": "Academia de trading profesional especializada en lógica institucional y psicotrading para el mercado hispano.",
+      "sameAs": [
+        "https://t.me/tradevision90",
+        "https://www.instagram.com/tradervision90",
+        "https://www.tiktok.com/@neriontrade",
+        "https://whatsapp.com/channel/0029Vb6gcptJZg49w13b0L1H"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "tradevision2026@gmail.com",
+        "contactType": "customer support"
+      }
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://gstatic.com" crossorigin>
@@ -303,11 +338,11 @@
     </style>
     <script>
       (function() {
-        const publicPages = ['/checkout/complete'];
+        const publicPages = ['/checkout/complete', '/comunidad'];
         const path = window.location.pathname.replace(/\/$/, '');
         
         if (publicPages.includes(path)) {
-          // Redirigimos internamente de /checkout/complete a /#/checkout/complete
+          // Redirigimos internamente
           window.location.replace(window.location.origin + '/#' + path);
         }
       })();
